--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,12 +53,29 @@
     <string name="dlg_load_title">Load game</string>
     <string name="dlg_load_message">There is a saved game!\nDo you want to continue it?</string>
     <string name="dlg_load_btn_load">Continue last game</string>
-    <string name="dlg_load_btn_new_game">Start new game</string>
-    
+    <string name="dlg_load_btn_new_game">Start new</string>
     <string name="points">Points</string>
     <string name="draw">Draw</string>
     <string name="wins">Wins</string>
-	<string name="winner">Winner: %s</string>
-	<string name="total">Total</string>
-	<string name="hand_and_score" formatted="false"> %s= %d %s</string>
+    <string name="winner">Winner: %s</string>
+    <string name="total">Total</string>
+    <string name="hand_and_score" formatted="false"> %s= %d %s</string>
+    <string name="how_overview_title">Game Overview</string>
+    <string name="how_rules_title">Rules</string>
+    <string name="how_overview_content">On game start 7 cards are dealt to each player. A card is placed faced up at the table, while the rest of the deck is placed upside down.\nAim of each player is to throw all cards of his hand. When a player throws his last card, then the game ends. His opponent gets 0 points, while he gets points, depending on the sum of points of each card is left in the hands of the opponent.\nEach card (2 to 10) has as many points as its number. Face cards (jack, queen and king - J, Q, K) are by 10 points. Aces (A) with 20 points.</string>
+    <string name="how_rules_content">Each player must throw a card that has either the same number or the same suit with the card which is faced up the table. If he have not any corresponding card, then he must draw a card from the deck. If he still do not find an appropriate card then he say "passo".\nEach player may draw cards from the deck even he have cards available to play. May also say passo even if he have card available to play. In any case, before a player say passo should have draw a card from the deck.</string>
+    <string name="how_special_card_title">Special Cards</string>
+    <string name="how_special_card_ace_title">Ace</string>
+    <string name="how_special_card_seven_title">Seven</string>
+    <string name="how_special_card_eight_title">Eight</string>
+    <string name="how_special_card_content">Some cards don\'t follows the normal an have some special effects.</string>
+	<string name="how_special_card_ace_content">Ace can be played over any card (regardless of suit and rank) except Ace. If a player play an ace then he can choose any suit he wants. The next player will play with the claimed suit. And also the players can not go out with Ace.</string>
+    <string name="how_special_card_seven_content">If a player play 7, then the next player draws two cards from the deck, unless he has 7, so playing it the next player will draw 4 cards from the deck and so until a player has no 7. If the player who gets the cards do not have an appropriate card to play, then he must draw a card from the deck. If a player draw cards after of the previously played 7 and finds a 7 in these cards, he can play it, but it would act as the first 7 (the next player will draw 2 cards).</string>
+    <string name="how_special_card_eight_content">If a player play 8 he must play again. If he have not any corresponding card, then he must draw a card from the deck. If he still do not find an appropriate card then he say "passo". A player can play as many 8s in a row as he wants to.</string>
+	<string name="next">Next</string>
+	<string name="previous">Previous</string>
+	
+	<string name="how_cpu_cards">These is your opponent cards</string>
+	<string name="how_your_cards">These is your cards</string>
+	<string name="how_deck">Deck</string>
 </resources>
