Added: Moderate diff mode GameListeners (unused) anims for HowToPlay switch screens
Modified:
CardGame.java init() methode for constructors same code
Player.toString()
AgoniaGame.java save/load game methodes
ImageViews to dividers
How next-prev. button align

Removed:
empty javadoc comments

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -78,4 +78,5 @@
 	<string name="how_cpu_cards">These is your opponent cards</string>
 	<string name="how_your_cards">These is your cards</string>
 	<string name="how_deck">Deck</string>
+	<string name="done">Done</string>
 </resources>
