--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -27,7 +27,7 @@
     <string name="deck_finish_finish_game">Τελείωσε το πααιχνίδι</string>
     <string name="dlg_save_title">Αποθήκευση παιχνιδιού</string>
     <string name="dlg_save_message">Το παιχνίδι δεν τελείωσε!\nΤί θέλεις να κάνεις;\n(πάτα το κουμπί πίσω για να συνεχίσεις να παίζεις)</string>
-    <string name="dlg_save_btn_save">Αποθήκευση</string>
+    <string name="dlg_save_btn_save">Αποθ.</string>
     <string name="dlg_save_btn_exit">Εξοδος</string>
     <string name="dlg_save_btn_finish_game">Τέλος παιχνιδιού</string>
     <string name="dlg_load_title">Επαναφορά παιχνιδιού</string>
@@ -53,9 +53,10 @@
     <string name="how_special_card_seven_content">Αν ένας παίκτης ρίξει 7, τότε ο επόμενος παίκτης τραβάει δύο φύλλα από την τράπουλα, εκτός αν έχει και ο ίδιος 7, οπότε παίζοντάς το ο επόμενος παίκτης θα τραβήξει 4 φύλλα από την τράπουλα κ.ο.κ. μέχρι να βρεθεί παίκτης που δεν έχει 7. Αν ο παίκτης που θα πάρει τα φύλλα δεν έχει κατάλληλο φύλλο για να παίξει, τότε θα τραβήξει ένα φύλλο από την τράπουλα. Άν ένας παίκτης τραβήξει φύλλα μετά από το 7 του προηγούμενου παίκτη και στα φύλλα που θα τράβηξε βρει 7άρι, μπορεί να το παίξει, αλλά θα ισχύει σαν να είναι το πρώτο 7άρι (ο επόμενος παίκτης θα τραβήξει 2 φύλλα).</string>
     <string name="how_special_card_eight_content">Αν ένας παίκτης ρίξει 8, πρέπει να ξαναπαίξει. Αν δεν έχει κατάλληλο φύλλο, πρέπει να τραβήξει από την τράπουλα και αν δεν βρει κατάλληλο φύλλο να πάει πάσο. Ένας παίκτης μπορεί να παίξει στη σειρά όσα 8άρια θέλει.</string>
 	<string name="next">Επόμενο</string>
-	<string name="previous">Προηγούμενο</string>
+	<string name="previous">Προηγούμ.</string>
 	
-	<string name="how_cpu_cards">Τα φύλλα ου αντιπάλου</string>
+	<string name="how_cpu_cards">Τα φύλλα του αντιπάλου</string>
 	<string name="how_your_cards">Τα φύλλα σου</string>
 	<string name="how_deck">Τράπουλα</string>
+	<string name="done">Τέλος</string>
 </resources>
