Added: Ace on Ace pref Ace the Last pref Agonia.handleAce()
Modified:
DragOver tou UIDeck pano ap to UIStackTop den emfanizei color hint

--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -45,11 +45,11 @@
     <string name="how_overview_content">Σε κάθε παρτίδα μοιράζονται από 7 φύλλα σε κάθε παίκτη. Ένα φύλλο τοποθετείται ανοιχτό στο τραπέζι, ενώ η υπόλοιπη τράπουλα τοποθετείται ανάποδα.\nΣκοπός κάθε παίκτη είναι να ρίξει όλα τα φύλλα που έχει στο χέρι. Όταν ένας παίκτης ρίξει το τελευταίο του φύλλο, τότε η παρτίδα τελειώνει. Ο αντίπαλός του παίρνει μηδέν πόντους, ενώ αυτός παίρνει πόντους, ανάλογα με το άθροισμα των πόντων του κάθε φύλλου που έχει μείνει στα χέρια του αντιπάλου.\nΚάθε φύλλο (από 2 έως 10) έχει τόσους πόντους όσο και ο αριθμός του. Οι φιγούρες (βαλές, ντάμα και ρήγας - J,Q,K) έχουν από 10 πόντους. Οι άσσοι (A) έχουν 20 πόντους.</string>
     <string name="how_rules_content">Ο κάθε παίκτης πρέπει να ρίξει ένα φύλλο το οποίο να έχει είτε τον ίδιο αριθμό ή την ίδια φιγούρα με το φύλλο που βρίσκεται ανοικτό πάνω στο τραπέζι. Αν δεν έχει αντίστοιχο φύλλο, τότε πρέπει να τραβήξει ένα φύλλο από την τράπουλα. Αν και πάλι δεν βρει κατάλληλο φύλλο τότε πάει πάσο.\nΟ κάθε παίκτης μπορεί να τραβήξει φύλλο από την τράπουλα ακόμα και αν έχει διαθέσιμο φύλλο να παίξει. Μπορεί επίσης να πάει πάσο ακόμα και αν έχει διαθέσιμο φύλλο να παίξει. Σε κάθε περίπτωση όμως, πριν ένας παίκτης πάει πάσο θα πρέπει να έχει τραβήξει ένα φύλλο από την τράπουλα.</string>
     <string name="how_special_card_title">Ειδικά φύλλα</string>
-    <string name="how_special_card_ace_title">Άσος</string>
+    <string name="how_special_card_ace_title">Άσσος</string>
     <string name="how_special_card_seven_title">Εφτά</string>
     <string name="how_special_card_eight_title">Οκτώ</string>
     <string name="how_special_card_content">Κάποια φύλλα δεν ακολουθούν τους συνηθισμένους κανονες και έχουν ξεχωριστές ιδιότητες.</string>
-    <string name="how_special_card_ace_content">Ο Άσος μπορεί να παιχτεί πάνω από οποιοδήποτε φύλλο (ασχέτος φιγούρας και αριθμού) εκτός από Άσο. Αν ένας παίκτης ρίξει Άσο, τότε μπορεί να επιλέξει όποια φιγούρα θέλει. Ο επόμενος παίκτης θα παίξει με τη φιγούρα που έχει δηλωθεί. Και επίσης οι παίχτες δεν μπορούν να βγούν με Άσο.</string>
+    <string name="how_special_card_ace_content">Ο Άσσος μπορεί να παιχτεί πάνω από οποιοδήποτε φύλλο (ασχέτος φιγούρας και αριθμού). Αν ένας παίκτης ρίξει Άσσο, τότε μπορεί να επιλέξει όποια φιγούρα θέλει. Ο επόμενος παίκτης θα παίξει με τη φιγούρα που έχει δηλωθεί.</string>
     <string name="how_special_card_seven_content">Αν ένας παίκτης ρίξει 7, τότε ο επόμενος παίκτης τραβάει δύο φύλλα από την τράπουλα, εκτός αν έχει και ο ίδιος 7, οπότε παίζοντάς το ο επόμενος παίκτης θα τραβήξει 4 φύλλα από την τράπουλα κ.ο.κ. μέχρι να βρεθεί παίκτης που δεν έχει 7. Αν ο παίκτης που θα πάρει τα φύλλα δεν έχει κατάλληλο φύλλο για να παίξει, τότε θα τραβήξει ένα φύλλο από την τράπουλα. Άν ένας παίκτης τραβήξει φύλλα μετά από το 7 του προηγούμενου παίκτη και στα φύλλα που θα τράβηξε βρει 7άρι, μπορεί να το παίξει, αλλά θα ισχύει σαν να είναι το πρώτο 7άρι (ο επόμενος παίκτης θα τραβήξει 2 φύλλα).</string>
     <string name="how_special_card_eight_content">Αν ένας παίκτης ρίξει 8, πρέπει να ξαναπαίξει. Αν δεν έχει κατάλληλο φύλλο, πρέπει να τραβήξει από την τράπουλα και αν δεν βρει κατάλληλο φύλλο να πάει πάσο. Ένας παίκτης μπορεί να παίξει στη σειρά όσα 8άρια θέλει.</string>
     <string name="next">Επόμενο</string>
@@ -60,5 +60,8 @@
     <string name="done">Τέλος</string>
 
     <string name="pref_color_hints_title">Χρωματικές ενδείξεις</string>
-    <string name="pref_color_hints_summ">Διάφορες ενδείξεις για να σε βοηθάν όταν παίζεις</string>
+    <string name="pref_color_hints_summ">Διάφορες ενδείξεις που σε καθοδηγούν όταν παίζεις</string>
+    
+    <string name="pref_ace_on_ace_summ">Ο Άσσος μπορεί να παιχτεί πάνω σε Άσσο</string>
+    <string name="pref_ace_finish_summ">Οι παίκτες μπορούν να βγουν με Άσσο</string>
 </resources>
